--- a/app/src/main/res/layout/activity_baidu.xml
+++ b/app/src/main/res/layout/activity_baidu.xml
@@ -3,10 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".lbs.BaiduActivity">
 
     <TextView
         android:id="@+id/textview_position"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/mapview_baidu"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:clickable="true"/>
+    <Button
+        android:id="@+id/btn_mylocation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="My Location"/>
+
 </LinearLayout>
