--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,11 +3,11 @@
 <group android:checkableBehavior="single">
     <item
         android:id="@+id/nav_call"
-        android:icon="@drawable/user"
+        android:icon="@drawable/call"
         android:title="Call"/>
     <item
         android:id="@+id/nav_friends"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/highfive"
         android:title="Friends"/>
     <item
         android:id="@+id/nav_location"
