--- a/app/src/main/res/layout/activity_material_main.xml
+++ b/app/src/main/res/layout/activity_material_main.xml
@@ -53,4 +53,14 @@
         android:textColor="#fff"
         android:layout_margin="4dp"
         android:text="CardView"/>
+    <Button
+        android:id="@+id/btn_collapsing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:textAllCaps="false"
+        android:background="#DA6060"
+        android:textColor="#fff"
+        android:layout_margin="4dp"
+        android:text="CollapsingToolbarLayout"/>
 </LinearLayout>
