--- a/app/src/main/res/layout/fruit_item.xml
+++ b/app/src/main/res/layout/fruit_item.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    app:cardElevation="15dp"
     app:cardCornerRadius="4dp">
     <LinearLayout
         android:orientation="vertical"
@@ -22,6 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="5dp"
+            android:textStyle="bold"
+            android:textColor="#FD90EC"
             android:textSize="16sp"/>
     </LinearLayout>
 
