--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/backup"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/backup"
         android:title="Backup"
         app:showAsAction="always"/>
     <item
         android:id="@+id/delete"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/delete"
         android:title="Delete"
         app:showAsAction="ifRoom"/>
     <item
