--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorGrey1">#ffffff</color>
     <color name="colorGrey7">#8c8c8c</color>
     <color name="colorBlack">#000000</color>
+    <color name="red">#F31808</color>
 </resources>
