--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,11 +2,11 @@
 
     <!-- Base application theme. -->
     <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-        <!-- Customize your theme here. -->
-       <!-- <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>-->
+    <!-- Customize your theme here. -->
+    <!-- <item name="colorPrimary">@color/colorPrimary</item>
+     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+     <item name="colorAccent">@color/colorAccent</item>
+ </style>-->
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -14,6 +14,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="FruitTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -31,4 +32,20 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Theme1" parent="@style/AppTheme">
+        <item name="android:windowNoTitle">false</item>
+        <item name="android:windowBackground">@drawable/blackbg</item>
+    </style>
+
+    <style name="Theme2" parent="@style/AppTheme">
+        <item name="android:windowNoTitle">false</item>
+        <item name="android:windowBackground">@drawable/whitebg</item>
+    </style>
+    <style name="title">
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">#06f</item>
+    </style>
+    <style name="content" parent="title">
+        <item name="android:textSize">48sp</item>
+    </style>
 </resources>
