--- a/app/src/main/res/layout/activity_animation_main.xml
+++ b/app/src/main/res/layout/activity_animation_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".animation.AnimationMainActivity">
     <Button
         android:id="@+id/animation_1"
@@ -14,6 +15,18 @@
         android:layout_marginRight="5dp"
         android:background="#5E19CE"
         android:text="欢迎界面"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="30sp" />
+    <Button
+        android:id="@+id/animation_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
+        android:background="#5E19CE"
+        android:text="杀毒扫描"
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="30sp" />
