--- a/app/src/main/res/drawable/my_progress.xml
+++ b/app/src/main/res/drawable/my_progress.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<!--背景图片，id固定-->
-<item android:id="@android:id/background"
-    android:drawable="@drawable/security_progress_bg"/>
-<!--进度图片，id固定-->
-<item android:id="@android:id/progress"
-    android:drawable="@drawable/security_progress"/>
+    <!--背景图片，id固定-->
+    <item
+        android:id="@android:id/background"
+        android:drawable="@drawable/security_progress_bg" />
+    <!--进度图片，id固定-->
+    <item
+        android:id="@android:id/progress"
+        android:drawable="@drawable/security_progress" />
 
 </layer-list>
