--- a/app/src/main/res/layout/activity_zoom.xml
+++ b/app/src/main/res/layout/activity_zoom.xml
@@ -7,12 +7,17 @@
     tools:context=".selfview.ZoomActivity">
     <com.example.myapplication.selfview.ZoomScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/bg2" />
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/bg2" />
+        </LinearLayout>
+
 
     </com.example.myapplication.selfview.ZoomScrollView>
 
