--- a/app/src/main/res/layout/activity_myself.xml
+++ b/app/src/main/res/layout/activity_myself.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".selfview.MyselfActivity">
     <Button
         android:id="@+id/myview_1"
@@ -17,5 +18,18 @@
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="30sp" />
+    <Button
+        android:id="@+id/ripple_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
+        android:background="#5E19CE"
+        android:text="点击水波纹"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="30sp" />
+
 
 </LinearLayout>
