--- a/app/src/main/res/layout/activity_myself.xml
+++ b/app/src/main/res/layout/activity_myself.xml
@@ -30,6 +30,18 @@
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="30sp" />
+    <Button
+        android:id="@+id/youku_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
+        android:background="#5E19CE"
+        android:text="优酷菜单"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="30sp" />
 
 
 </LinearLayout>
