--- a/app/src/main/res/layout/activity_myself.xml
+++ b/app/src/main/res/layout/activity_myself.xml
@@ -11,37 +11,49 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="2dp"
         android:layout_marginRight="5dp"
         android:background="#5E19CE"
         android:text="下拉放大背景"
         android:textAllCaps="false"
         android:textColor="#ffffff"
-        android:textSize="30sp" />
+        android:textSize="20sp" />
     <Button
         android:id="@+id/ripple_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="2dp"
         android:layout_marginRight="5dp"
         android:background="#5E19CE"
         android:text="点击水波纹"
         android:textAllCaps="false"
         android:textColor="#ffffff"
-        android:textSize="30sp" />
+        android:textSize="20sp" />
     <Button
         android:id="@+id/youku_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="2dp"
         android:layout_marginRight="5dp"
         android:background="#5E19CE"
         android:text="优酷菜单"
         android:textAllCaps="false"
         android:textColor="#ffffff"
-        android:textSize="30sp" />
+        android:textSize="20sp" />
+    <Button
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="5dp"
+        android:background="#5E19CE"
+        android:text="ViewPager"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
