--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -29,7 +29,7 @@
             android:id="@+id/layout_point"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
         </LinearLayout>
