--- a/app/src/main/res/layout/activity_myself.xml
+++ b/app/src/main/res/layout/activity_myself.xml
@@ -66,6 +66,18 @@
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="20sp" />
+    <Button
+        android:id="@+id/myswitch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="5dp"
+        android:background="#5E19CE"
+        android:text="自定义开关"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
