--- a/app/src/main/res/layout/activity_switch.xml
+++ b/app/src/main/res/layout/activity_switch.xml
@@ -7,6 +7,7 @@
     tools:context=".selfview.SwitchActivity">
 
     <com.example.myapplication.selfview.myview.MyToggleButton
+        android:id="@+id/switch_button"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
