--- a/app/src/main/res/layout/activity_view_group1.xml
+++ b/app/src/main/res/layout/activity_view_group1.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent" />
     <RadioGroup
         android:id="@+id/radio_group"
+        android:background="#fff"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
