--- a/app/src/main/res/layout/activity_myself.xml
+++ b/app/src/main/res/layout/activity_myself.xml
@@ -25,7 +25,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="2dp"
         android:layout_marginRight="5dp"
-        android:background="#5E19CE"
+        android:background="#2196F3"
         android:text="点击水波纹"
         android:textAllCaps="false"
         android:textColor="#ffffff"
@@ -49,7 +49,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="2dp"
         android:layout_marginRight="5dp"
-        android:background="#5E19CE"
+        android:background="#2196F3"
         android:text="ViewPager"
         android:textAllCaps="false"
         android:textColor="#ffffff"
@@ -73,7 +73,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="2dp"
         android:layout_marginRight="5dp"
-        android:background="#5E19CE"
+        android:background="#2196F3"
         android:text="自定义开关"
         android:textAllCaps="false"
         android:textColor="#ffffff"
@@ -97,7 +97,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="2dp"
         android:layout_marginRight="5dp"
-        android:background="#5E19CE"
+        android:background="#2196F3"
         android:text="ViewGroup仿ViewPager"
         android:textAllCaps="false"
         android:textColor="#ffffff"
@@ -121,10 +121,35 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="2dp"
         android:layout_marginRight="5dp"
-        android:background="#5E19CE"
+        android:background="#2196F3"
         android:text="联系人快速索引"
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="20sp" />
+    <Button
+        android:id="@+id/slide_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="5dp"
+        android:background="#5E19CE"
+        android:text="侧滑删除"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
+    <Button
+        android:id="@+id/mytest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="5dp"
+        android:background="#2196F3"
+        android:text="测试用"
+        android:textAllCaps="false"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
+
 
 </LinearLayout>
