--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -3,7 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="60dp">
 
-    <include android:id="@+id/item_content" layout="@layout/item_content"/>
-    <include android:id="@+id/item_menu" layout="@layout/item_menu"/>
+    <include
+        android:id="@+id/item_content"
+        layout="@layout/item_content" />
+
+    <include
+        android:id="@+id/item_menu"
+        layout="@layout/item_menu" />
 
 </com.example.myapplication.selfview.myview.SlideLayout>
