--- a/app/src/main/res/layout/activity_slide_delete.xml
+++ b/app/src/main/res/layout/activity_slide_delete.xml
@@ -12,7 +12,7 @@
     <com.example.myapplication.selfview.myview.SlideLayout
 
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="60dp">
 
         <TextView
             android:layout_width="match_parent"
