--- a/app/src/main/res/layout/activity_slide_delete.xml
+++ b/app/src/main/res/layout/activity_slide_delete.xml
@@ -5,35 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".selfview.SlideDeleteActivity">
-    <!--<ListView
+
+    <ListView
         android:id="@+id/lv_slide"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>-->
-    <com.example.myapplication.selfview.myview.SlideLayout
+        android:layout_height="match_parent" />
+    <!-- <com.example.myapplication.selfview.myview.SlideLayout
 
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
+         android:layout_width="match_parent"
+         android:layout_height="60dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="#44000000"
-            android:gravity="center"
-            android:text="Content"
-            android:textColor="#000000"
-            android:textSize="25sp">
+         <TextView
+             android:layout_width="match_parent"
+             android:layout_height="60dp"
+             android:background="#44000000"
+             android:gravity="center"
+             android:text="Content"
+             android:textColor="#000000"
+             android:textSize="25sp">
 
-        </TextView>
+         </TextView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:background="#22000000"
-            android:gravity="center"
-            android:text="Delete"
-            android:textColor="#ff0000"
-            android:textSize="25sp">
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="60dp"
+             android:background="#22000000"
+             android:gravity="center"
+             android:text="Delete"
+             android:textColor="#ff0000"
+             android:textSize="25sp">
 
-        </TextView>
-    </com.example.myapplication.selfview.myview.SlideLayout>
+         </TextView>
+     </com.example.myapplication.selfview.myview.SlideLayout>-->
 </RelativeLayout>
